<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/book_name"
            android:icon="@android:drawable/btn_default_small"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/rating"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/price"
            android:icon="?attr/actionModeSelectAllDrawable"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/buy_link"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
